@@ -10,6 +10,8 @@
     - added concat() nexl system function to concat primitives, array and objects. Function accepts multiple arguments
     - added keys() and vals() nexl system functions to retrieve keys and values from object at specified level
     - added obj() ( creates object from multiple arguments ), arr() ( creates array from multiple arguments ) nexl system functions
+    - setObjKey() function renamed to setKey()
+    - setObjVal() function renamed to setVal()
     - fixed nexl expressions deep resolution bug ( affects to iterations )
 
 2.2.1 | 26-MAY-2017
